sdk_tests/tests/pbc_contract_codegen/fail/zk/zk_init_arg_false_for_zk_on_secret_input.stderr
error[E0080]: evaluation of constant value failed
  --> tests/pbc_contract_codegen/fail/zk/zk_init_arg_false_for_zk_on_secret_input.rs:14:1
   |
14 | #[zk_on_secret_input(shortname = 0x04)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'do_zk_on_secret_input cannot be zk if the init function is not zk. Consider using #[init(zk = true)]', $DIR/tests/pbc_contract_codegen/fail/zk/zk_init_arg_false_for_zk_on_secret_input.rs:14:1
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)
